# books-review

./: .gitignore
api/: .env  Cargo.toml
api/migration/: Cargo.toml
api/migration/src/: lib.rs  m20220101_000001_create_book_table.rs
api/src/: lib.rs  main.rs
api/src/entities/: book.rs  mod.rs  prelude.rs
front/: Cargo.toml
front/src/: main.rs
front/src/components/: add_book.rs  books_list.rs  mod.rs
